dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/wrongArguments/arguments.alg
algoritmo "erro argumento procedimento"

procedimento proc(teste: inteiro; foo: real)
inicio
fimprocedimento

inicio

    proc("a")

fimalgoritmo
